[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/resources/Themes.tres" type="Theme" id=1]
[ext_resource path="res://src/utilities/TableRow.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.113725, 0.486275, 0.733333, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.658824, 0.658824, 0.658824, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.658824, 0.658824, 0.658824, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.780392, 0.780392, 0.780392, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="TableRow" type="Control"]
margin_right = 507.0
margin_bottom = 26.0
rect_min_size = Vector2( 0, 26 )
focus_mode = 1
script = ExtResource( 2 )

[node name="Highlight" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme = ExtResource( 1 )

[node name="1" type="Label" parent="HBoxContainer"]
margin_top = 6.0
margin_right = 176.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
text = "Cliente"

[node name="2" type="Label" parent="HBoxContainer"]
margin_left = 176.0
margin_top = 6.0
margin_right = 249.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Equipamento"

[node name="3" type="Label" parent="HBoxContainer"]
margin_left = 249.0
margin_top = 6.0
margin_right = 308.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Fabricante"

[node name="4" type="Label" parent="HBoxContainer"]
margin_left = 308.0
margin_top = 6.0
margin_right = 379.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Data entrada"

[node name="5" type="Label" parent="HBoxContainer"]
margin_left = 379.0
margin_top = 6.0
margin_right = 438.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Data saída"

[node name="6" type="Label" parent="HBoxContainer"]
margin_left = 438.0
margin_top = 6.0
margin_right = 507.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Identificação"

[node name="menu" type="PopupMenu" parent="."]
margin_right = 20.0
margin_bottom = 20.0
focus_mode = 0
custom_styles/panel = SubResource( 2 )
items = [ "Acessar", null, 0, false, false, 0, 0, null, "", false, "Editar", null, 0, false, false, 1, 0, null, "", false ]

[connection signal="focus_entered" from="." to="." method="_on_Control_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_Control_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_TableRow_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_TableRow_mouse_exited"]
[connection signal="index_pressed" from="menu" to="." method="_on_menu_index_pressed"]
